--- a/smacofNM/smacofNM.Rmd
+++ b/smacofNM/smacofNM.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
     | Smacof at 50: A Manual
-    | Part 4: Non-metric Smacof
+    | Part 4: Smacof for Cartwheel Data
 author: 
 - Jan de Leeuw - University of California Los Angeles
 date: '`r paste("Started March 30 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
